--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "format": "prettier --write \"src/**/*.js\"",
     "lint": "prettier --check \"src/**/*.js\"",
     "pre-commit": "pretty-quick --staged",
-    "install:husky": "husky install"
+    "install:husky": "husky install",
+    "homepage": "https://miike0.github.io/Plugin-Lazy-loading"
   },
   "devDependencies": {
     "husky": "7",
